@@ -15,11 +15,8 @@ package org.eclipse.syson.services.api;
 import org.antlr.v4.runtime.BaseErrorListener;
 import org.antlr.v4.runtime.RecognitionException;
 import org.antlr.v4.runtime.Recognizer;
-import org.eclipse.sirius.components.core.api.IFeedbackMessageService;
-import org.eclipse.sirius.components.representations.Message;
-import org.eclipse.sirius.components.representations.MessageLevel;
-
-import java.util.Objects;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * The ANTLR Error Listener for the direct edit grammar for SysON diagrams.
@@ -28,15 +25,11 @@ import java.util.Objects;
  */
 public class DiagramDirectEditErrorListener extends BaseErrorListener {
 
-    private final IFeedbackMessageService feedbackMessageService;
-
-    public DiagramDirectEditErrorListener(IFeedbackMessageService feedbackMessageService) {
-        this.feedbackMessageService = Objects.requireNonNull(feedbackMessageService);
-    }
+    private final Logger logger = LoggerFactory.getLogger(DiagramDirectEditErrorListener.class);
 
     @Override
     public void syntaxError(Recognizer<?, ?> recognizer, Object offendingSymbol, int line, int charPositionInLine, String msg, RecognitionException e) {
-        this.feedbackMessageService.addFeedbackMessage(new Message("Invalid expression provided during direct edit.", MessageLevel.ERROR));
+        this.logger.info(msg);
     }
 
 }
